canadensis_dsdl_frontend/tests/compile_fail/utf8_not_allowed/canadensis/ContainsUtf8.1.0.dsdl
utf8[<=16] something

@sealed
